<resources>
    <string name="app_name">Chat_COCO</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="online">Online</string>
    <string name="create_call">Create Meeting</string>
    <string name="createnewmeeting">CreateNewMeeting</string>
    <string name="joinmeeting">JoinMeeting</string>
</resources>