<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_gradient"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_5ssp"
    tools:context=".Activitys.SigninActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/textCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#48FFFFFF"
        android:elevation="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toTopOf="@+id/textCreateNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_25ssp"
            android:layout_height="@dimen/_25ssp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55ssp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55ssp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/emil"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uiPleaseLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sf_pro_text_heavy"
        android:text="@string/login_to_continue"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uiWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="@dimen/_10ssp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@id/uiPleaseLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/chat_icon"
        app:layout_constraintBottom_toTopOf="@id/uiWelcomeBack"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>









