<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Activitys.RoomActivity">


    <TextView
        android:id="@+id/uiPleaseLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30ssp"
        android:fontFamily="@font/sf_pro_text_heavy"
        android:text="@string/create_call"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_id_meeting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55ssp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="@dimen/_50ssp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="Meeting ID"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/uiPleaseLogIn"
        tools:layout_editor_absoluteX="36dp" />

    <EditText
        android:id="@+id/input_name_person"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55ssp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="18dp"
        android:fontFamily="@font/sf_pro_text_medium"
        android:hint="Your Name"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="#3C3C43"
        android:textColorHint="#DD4A4A50"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/input_id_meeting"
        app:layout_constraintStart_toStartOf="@+id/input_id_meeting"
        app:layout_constraintTop_toBottomOf="@+id/input_id_meeting" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_CreateNewMeeting"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="@dimen/_50ssp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#48FFFFFF"
        android:elevation="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:gravity="center"
        android:text="@string/createnewmeeting"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/input_name_person" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_joinMeeting"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#48FFFFFF"
        android:elevation="20dp"
        android:fontFamily="@font/sf_pro_text_bold"
        android:gravity="center"
        android:text="@string/joinmeeting"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_CreateNewMeeting"
        tools:layout_editor_absoluteX="46dp" />

</androidx.constraintlayout.widget.ConstraintLayout>