<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:background="@drawable/background_login_gradient"
    android:scrollbars="none"
    tools:context=".Activitys.SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15ssp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/_80ssp"
                android:layout_height="@dimen/_80ssp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />
        </FrameLayout>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55ssp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="18dp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#3C3C43"
            android:textColorHint="#DD4A4A50"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55ssp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/emil"
            android:drawablePadding="18dp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#3C3C43"
            android:textColorHint="#DD4A4A50"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55ssp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="18dp"
            android:fontFamily="@font/sf_pro_text_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="#3C3C43"
            android:textColorHint="#DD4A4A50"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16ssp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_round"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="Sign Up"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                 />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_25ssp"
                android:layout_height="@dimen/_25ssp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/textSignIn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="36dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="#48FFFFFF"
            android:elevation="20dp"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="Login"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>

</ScrollView>